# expression

./: *compilation*  .dir-locals.el  CMakeLists.txt  Doxyfile.in  Makefile  README.org  expression-config.cmake.in
expression/: CMakeLists.txt  alternative.hpp  app.hpp  binding.hpp  boolean.hpp  compile.hpp  cond.hpp  config.hpp.in  data.hpp  de_bruijn.hpp  expr.hpp  expression.hpp  fun.hpp  fwd.hpp  guard.hpp  import.hpp  let.hpp  normal.hpp  occurs.hpp  rewrite.hpp  simplify.hpp  utility.hpp  val.hpp  var.hpp
expression_testing/: CMakeLists.txt  abstraction_test.cpp  alternative.hpp  alternative_test.cpp  application_test.cpp  arithmetic_test.cpp  binding_test.cpp  boolean_test.cpp  compile_test.cpp  cond_test.cpp  conditional.cpp  data_test.cpp  de_bruijn_test.cpp  guard_test.cpp  let_test.cpp  normal_test.cpp  occurance_test.cpp  rewrite_test.cpp  simplify_test.cpp  test_macros.hpp  test_tools.hpp  value_test.cpp  variable_test.cpp
